zerocopy-derive/tests/ui-nightly/late_compile_pass.stderr
warning: unused import: `zerocopy::KnownLayout`
  --> tests/ui-nightly/late_compile_pass.rs:16:5
   |
16 | use zerocopy::KnownLayout;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:28:10
   |
28 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `TryFromBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:37:10
   |
37 | #[derive(FromZeros)]
   |          ^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `TryFromBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:37:10
   |
37 | #[derive(FromZeros)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeros`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `TryFromBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeros`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `zerocopy::FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:55:10
   |
55 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:65:10
   |
65 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             NonZero<i8>
             NonZero<u8>
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:73:10
   |
73 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             NonZero<i8>
             NonZero<u8>
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-nightly/late_compile_pass.rs:80:10
   |
80 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: the following other types implement trait `Unaligned`:
             bool
             i8
             u8
             Unaligned1
             Unaligned2
             Unaligned3
             NonZero<i8>
             NonZero<u8>
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
